--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                 <div id="imgs2"></div>
             </div>
 
+			<div class="template2" style="padding-top: 20px;">
+				<h1>Usage</h1>
+				<a href="demo.html">Usage instructions</a>
+			</div>
+			
         </div><!-- /.container -->
 
 
