--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head><!--[if lt IE 9]><script language="javascript" type="text/javascript" src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <head>
+  <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <meta charset="UTF-8"><style>/*
  * Bootstrap v2.2.1
  *
@@ -229,11 +230,11 @@ body {
 }
 @font-face {
       font-family: 'hse';
-      src: url('./font/hse.eot?15299815');
-      src: url('./font/hse.eot?15299815#iefix') format('embedded-opentype'),
-           url('./font/hse.woff?15299815') format('woff'),
-           url('./font/hse.ttf?15299815') format('truetype'),
-           url('./font/hse.svg?15299815#hse') format('svg');
+      src: url('./font/hse.eot?21974651');
+      src: url('./font/hse.eot?21974651#iefix') format('embedded-opentype'),
+           url('./font/hse.woff?21974651') format('woff'),
+           url('./font/hse.ttf?21974651') format('truetype'),
+           url('./font/hse.svg?21974651#hse') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -272,10 +273,11 @@ body {
       -moz-osx-font-smoothing: grayscale;
      
       /* Uncomment for 3D effect */
-      /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+       text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); 
     }
      </style>
-    <link rel="stylesheet" href="css/animation.css"><!--[if IE 7]><link rel="stylesheet" href="css/hse-ie7.css"><![endif]-->
+    <link rel="stylesheet" href="css/animation.css">
+	<!--[if IE 7]><link rel="stylesheet" href="css/hse-ie7.css"><![endif]-->
     <script>
       function toggleCodes(on) {
         var obj = document.getElementById('icons');
@@ -293,7 +295,7 @@ body {
     <div class="container header">
       <h1>
         hse
-         <small>font demo</small>
+         <small>font</small>
       </h1>
       <label class="switch">
         <input type="checkbox" onclick="toggleCodes(this.checked)">show codes
@@ -322,7 +324,7 @@ body {
         <div title="Code: 0xe80c" class="the-icons span3"><i class="demo-icon hse-wear-seat-belt ">&#xe80c;</i> <span class="i-name">hse-wear-seat-belt </span><span class="i-code">0xe80c</span></div>
         <div title="Code: 0xe80d" class="the-icons span3"><i class="demo-icon hse-wear-respiratory-protection">&#xe80d;</i> <span class="i-name">hse-wear-respiratory-protection</span><span class="i-code">0xe80d</span></div>
         <div title="Code: 0xe80e" class="the-icons span3"><i class="demo-icon hse-disconnect-before-repair">&#xe80e;</i> <span class="i-name">hse-disconnect-before-repair</span><span class="i-code">0xe80e</span></div>
-        <div title="Code: 0xe80f" class="the-icons span3"><i class="demo-icon hse-Wear High Visibility Clothing">&#xe80f;</i> <span class="i-name">hse-Wear High Visibility Clothing</span><span class="i-code">0xe80f</span></div>
+        <div title="Code: 0xe80f" class="the-icons span3"><i class="demo-icon hse-wear-high-visibility-clothing">&#xe80f;</i> <span class="i-name">hse-wear-high-visibility-clothing</span><span class="i-code">0xe80f</span></div>
       </div>
       <div class="row">
         <div title="Code: 0xe810" class="the-icons span3"><i class="demo-icon hse-wear-mask">&#xe810;</i> <span class="i-name">hse-wear-mask</span><span class="i-code">0xe810</span></div>
